[gd_scene load_steps=7 format=3 uid="uid://bwqba2pf424sj"]

[ext_resource type="Script" path="res://ui/hud.gd" id="1_x8gyq"]
[ext_resource type="Texture2D" uid="uid://buw28km4er68c" path="res://assets/collectables/hud_heart.png" id="2_7k1mf"]
[ext_resource type="Texture2D" uid="uid://bn5fnoj5kukwm" path="res://assets/collectables/hud_coin.png" id="3_o6x25"]
[ext_resource type="Texture2D" uid="uid://dkirn6u3y0e3j" path="res://assets/collectables/hud_shard.png" id="5_0u6n0"]
[ext_resource type="Texture2D" uid="uid://chjx8bkt5bfis" path="res://assets/ui/orange.png" id="5_4y4uv"]
[ext_resource type="FontFile" uid="uid://cbgk7pxtbuiqx" path="res://assets/ui/rev_mini_pixel.ttf" id="5_km0r1"]

[node name="HUD" type="CanvasLayer" node_paths=PackedStringArray("hearts_counter")]
script = ExtResource("1_x8gyq")
hearts_counter = [NodePath("Control/MarginContainer/VBoxContainer/HeartsContainer/Heart1"), NodePath("Control/MarginContainer/VBoxContainer/HeartsContainer/Heart2"), NodePath("Control/MarginContainer/VBoxContainer/HeartsContainer/Heart3")]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Timer" type="Timer" parent="Control"]
autostart = true

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -576.0
offset_bottom = -324.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="HeartsContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 0

[node name="Heart1" type="TextureRect" parent="Control/MarginContainer/VBoxContainer/HeartsContainer"]
layout_mode = 2
texture = ExtResource("2_7k1mf")

[node name="Heart2" type="TextureRect" parent="Control/MarginContainer/VBoxContainer/HeartsContainer"]
layout_mode = 2
texture = ExtResource("2_7k1mf")

[node name="Heart3" type="TextureRect" parent="Control/MarginContainer/VBoxContainer/HeartsContainer"]
layout_mode = 2
texture = ExtResource("2_7k1mf")

[node name="CoinsContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Sprite" type="TextureRect" parent="Control/MarginContainer/VBoxContainer/CoinsContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("3_o6x25")

[node name="Counter" type="Label" parent="Control/MarginContainer/VBoxContainer/CoinsContainer"]
texture_filter = 1
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("5_km0r1")
theme_override_font_sizes/font_size = 8
text = "00"

[node name="LivesContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Sprite" type="TextureRect" parent="Control/MarginContainer/VBoxContainer/LivesContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("5_4y4uv")

[node name="Counter" type="Label" parent="Control/MarginContainer/VBoxContainer/LivesContainer"]
texture_filter = 1
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("5_km0r1")
theme_override_font_sizes/font_size = 8
text = "00"

[node name="ShardsContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Sprite" type="TextureRect" parent="Control/MarginContainer/VBoxContainer/ShardsContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("5_0u6n0")
stretch_mode = 1

[node name="Counter" type="Label" parent="Control/MarginContainer/VBoxContainer/ShardsContainer"]
texture_filter = 1
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("5_km0r1")
theme_override_font_sizes/font_size = 8
text = "0"

[node name="TimerContainer" type="HBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Label" type="Label" parent="Control/MarginContainer/TimerContainer"]
texture_filter = 1
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("5_km0r1")
theme_override_font_sizes/font_size = 8
text = "TIME"

[node name="Counter" type="Label" parent="Control/MarginContainer/TimerContainer"]
texture_filter = 1
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("5_km0r1")
theme_override_font_sizes/font_size = 8
text = "00:00"

[node name="ScoreContainer" type="HBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="Label" type="Label" parent="Control/MarginContainer/ScoreContainer"]
texture_filter = 1
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("5_km0r1")
theme_override_font_sizes/font_size = 8
text = "SCORE"

[node name="Counter" type="Label" parent="Control/MarginContainer/ScoreContainer"]
texture_filter = 1
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("5_km0r1")
theme_override_font_sizes/font_size = 8
text = "0000"

[connection signal="timeout" from="Control/Timer" to="." method="_on_timer_timeout"]
